--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: mcosta74.github.io
-description: Massimo's Personal Page
-google_analytics: 
+title: Massimo Costa
+description: My Personal Page
+google_analytics:
 show_downloads: false
 theme: jekyll-theme-cayman
 
