chore: use Material theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,11 @@
 site_name: Massimo Costa's Personal Page
+site_author: Massimo Costa
+
+copyright: Copyright &copy; 2022, Massimo Costa
+
+theme:
+  name: 'material'
+
 nav:
   - Home: index.md
   - About: about.md
